# nice-bot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
bot/: bootstrap.py  bot.py  data.py  eloAOE.py  service.py
bot/cogs/: commands.py  listeners.py
bot/config/: config.toml
bot/resources/: comebacks.txt  facts.txt  spams.txt
debian/: changelog  control  dirs  install  links  logrotate  nicebot.service  postinst  rules
scripts/: install.sh
