[tool.poetry]
name = "nice-bot"
version = "0.1.0"
description = "Discord niceness tracker bot"
authors = ["Juan Schandin"]
license = "MIT"
readme="README.md"
packages = [
	{ include = "bot" }
]
classifiers = [
	"Private :: Do not Upload"
]

[tool.poetry.scripts]
nicebot = "bot.service:main"

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.5.1"
confight = "^1.3.1"
pid = "^3.0.4"
pandas = "^1.1.4"
requests = "^2.25.0"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
